--- a/src/modules/Header/Header.module.css
+++ b/src/modules/Header/Header.module.css
@@ -13,3 +13,14 @@
 .containerImage {
   flex-grow: 0.5;
 }
+
+.containerButtons {
+  display: flex;
+  gap: 10px;
+  flex-grow: 0.3;
+  justify-content: flex-end;
+}
+
+.active {
+  color: red;
+}
