--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -1,42 +1,53 @@
-.root {
-    position: relative;
+.register {
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
-.label {
-    position: absolute;
-    z-index: 2;
-    top: rem(7px);
-    left: var(--mantine-spacing-sm);
-    pointer-events: none;
-    color: light-dark(var(--mantine-color-gray-5), var(--mantine-color-dark-3));
-    transition: transform 150ms ease, font-size 150ms ease, color 150ms ease;
-
-    &[data-floating] {
-        transform: translate(calc(var(--mantine-spacing-sm) * -1), rem(-28px));
-        font-size: var(--mantine-font-size-xs);
-        font-weight: 500;
-        color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
-    }
+.register__form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
 }
 
-.required {
-    transition: opacity 150ms ease;
-    opacity: 0;
-
-    [data-floating] & {
-        opacity: 1;
-    }
+.register__title {
+    color: #333;
+    text-align: center;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 60px;
 }
 
-.input {
-    &::placeholder {
-        transition: color 150ms ease;
-        color: transparent;
-    }
+.register__inputRoot {
+    width: 522px;
+    height: 100px;
+}
 
-    &[data-floating] {
-        &::placeholder {
-            color: var(--mantine-color-placeholder);
-        }
-    }
+.register__input {
+    width: 100%;
+    height: 98px;
+    padding: 19px 30px;
+    border-radius: 50px;
+    background: #F1F1F1;
+    color: #333333;
+    text-align: left;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 60px;
+}
+
+.register__button {
+    border-radius: 50px;
+    background: #5277F6;
+    height: 76px;
+    color: #FFF;
+    text-align: center;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 60px;
+    padding: 10px 40px;
 }
