--- a/src/pages/Mission/Mission.module.css
+++ b/src/pages/Mission/Mission.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 .mission__header {
@@ -32,11 +33,6 @@
     line-height: 46px;
     opacity: 0.7;
     margin: 10px 0 40px;
-}
-
-.mission__icon {
-    width: 50px;
-    height: 50px;
 }
 
 .mission__box {
