--- a/src/components/Mission/MissionAccordion/MissionAccordion.module.css
+++ b/src/components/Mission/MissionAccordion/MissionAccordion.module.css
@@ -5,11 +5,16 @@
     margin: 30px 0;
 }
 
+.missionAccordion__admin {
+    border-radius: 36px;
+    background: #FFF;
+    border: 1px solid #5277F6;
+}
+
 .missionAccordion__item {
     border-radius: 36px;
     background: #FFF;
     border: none;
-
 }
 
 .missionAccordion__label {
@@ -119,4 +124,17 @@
     font-style: normal;
     font-weight: 400;
     line-height: 28px;
+}
+
+.buttonAddStage {
+    width: 332px;
+    height: 40px;
+    color: #5277F6;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 23px;
+    background: none;
+    border: 1px solid #5277F6;
+    border-radius: 20px ;
 }
