--- a/src/components/Mission/PopupMission/PopupMission.module.css
+++ b/src/components/Mission/PopupMission/PopupMission.module.css
@@ -1,7 +1,3 @@
-.popupMission {
-  max-width: 1310px;
-}
-
 .popupMission__popup {
   flex-direction: column;
   width: 100%;
@@ -11,8 +7,9 @@
 }
 
 .popupMission__container {
+  width: 100%;
   flex-direction: column;
-  margin: 61px 112px 121px;
+  margin: 61px 0 0;
 }
 
 .popupMission__box {
@@ -89,11 +86,6 @@
   line-height: 140%;
 }
 
-.popupMission__containerPhoto {
-  flex-direction: row;
-  gap: 50px;
-  margin-bottom: 130px;
-}
 
 .popupMission__buttonFinish {
   display: flex;
@@ -113,6 +105,15 @@
   line-height: 28px;
 }
 
-.popupClose {
-  display: none;
+.popupMission__editRoot {
+  border-radius: 48px;
+  background: #F8F8F8;
+  margin: 60px 0 90px;
+}
+.popupMission__editInner {
+  color: #5277F6;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
 }
