Адаптив на мои компоненты

--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -2,27 +2,28 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    margin: 100px auto 0;
 }
 
 .register__form {
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
     align-items: center;
+    width: 100%;
     gap: 30px;
 }
 
 .register__title {
     color: #333;
     text-align: center;
-    font-size: 32px;
     font-style: normal;
     font-weight: 500;
-    line-height: 60px;
+    line-height: 100%;
 }
 
 .register__inputRoot {
-    width: 522px;
-    height: 100px;
+    width: 100%;
 }
 
 .register__input {
@@ -33,10 +34,10 @@
     background: #F1F1F1;
     color: #333333;
     text-align: left;
-    font-size: 32px;
     font-style: normal;
     font-weight: 400;
-    line-height: 60px;
+    font-size: 26px;
+    line-height: 115%;
 }
 
 .register__button {
@@ -48,6 +49,40 @@
     font-size: 26px;
     font-style: normal;
     font-weight: 400;
-    line-height: 60px;
+    line-height: 100%;
     padding: 10px 40px;
 }
+
+@media screen and (max-width: 800px) {
+    .register__input {
+        height: 78px;
+        padding: 19px 30px;
+        border-radius: 50px;
+        font-size: 22px;
+    }
+
+    .register__button {
+        border-radius: 35px;
+        background: #5277F6;
+        height: 56px;
+        color: #FFF;
+    }
+
+    .register__form {
+        gap: 20px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .register__input {
+        height: 68px;
+        padding: 19px 30px;
+        border-radius: 50px;
+        font-size: 18px;
+    }
+
+    .register__form {
+        gap: 15px;
+    }
+}
+
