--- a/src/components/Mission/Mission.module.css
+++ b/src/components/Mission/Mission.module.css
@@ -17,20 +17,17 @@
 .mission__title {
     color:  #EEFF87;
     text-align: center;
-    font-size: 60px;
     font-style: normal;
     font-weight: 400;
-    line-height: 60px;
+    line-height: 115%;
 }
 
 .mission__text {
     color: #FFF;
-    width: 590px;
     text-align: center;
-    font-size: 40px;
     font-style: normal;
     font-weight: 400;
-    line-height: 46px;
+    line-height: 100%;
     opacity: 0.7;
     margin: 10px 0 40px;
 }
@@ -45,7 +42,6 @@
 .mission__iconText {
     color: #FFF;
     text-align: center;
-    font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 19px;
