--- a/src/components/Mission/MissionAccordion/MissionAccordion.module.css
+++ b/src/components/Mission/MissionAccordion/MissionAccordion.module.css
@@ -25,27 +25,20 @@
 
 .missionAccordion__control {
     border-radius: 36px;
-    padding: 0 112px 45px;
+    margin: 0 auto 30px;
 }
 
-.missionAccordion__chevron {
-    width: 30px;
-}
 
 .missionAccordion__control:hover {
     background: #FFF;
 }
 
-.missionAccordion__panel {
-
-}
 
 .missionAccordion__title {
     color: #5277F6;
-    font-size: 60px;
     font-style: normal;
     font-weight: 400;
-    line-height: 60px;
+    line-height: 115%;
     margin-bottom: 30px;
 }
 
@@ -59,11 +52,9 @@
 }
 .missionAccordion__progress {
     color: #5277F6;
-    font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 21px;
-    margin-bottom: 66px;
+    line-height: 100%;
 }
 
 /*КНОПКА ЗАДАНИЯ*/
@@ -84,12 +75,10 @@
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #CFCDCD;
-    width: 100%;
     color: #252525;
-    font-size: 24px;
     font-style: normal;
     font-weight: 400;
-    line-height: 28px;
+    line-height: 100%;
 }
 
 .missionAccordion__labelButton {
@@ -98,8 +87,8 @@
 
 .missionAccordion__EditingTaskRoot {
     padding: 0;
-    background: transparent;
     height: 90px;
+    background: transparent;
     border-bottom: 1px solid #CFCDCD;
     cursor: default;
 }
@@ -112,7 +101,7 @@
     color: #252525;
     font-style: normal;
     font-weight: 400;
-    line-height: 28px;
+    line-height: 100%;
 }
 /*КНОПКА ЗАДАНИЯ*/
 
@@ -126,43 +115,50 @@
 
 .missionAccordion__statusDn {
     color: #5277F6;
-    font-size: 24px;
     font-style: italic;
     font-weight: 400;
-    line-height: 28px;
+    line-height: 100%;
 }
 
 .buttonTest {
+    margin: 60px 0 90px;
     border-radius: 48px;
     background: #F8F8F8;
     width: 100%;
-    margin: 60px 0 90px;
+}
+
+@media screen and (max-width: 800px) {
+    .buttonTest {
+        margin: 40px 0 60px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .buttonTest {
+        margin: 20px 0 30px;
+    }
 }
 
 .buttonTestInner {
     color: #5277F6;
-    font-size: 24px;
     font-style: normal;
     font-weight: 400;
-    line-height: 28px;
+    line-height: 100%;
 }
 
 .buttonEditorInner {
     color: #FFF;
-    font-size: 24px;
     font-style: normal;
     font-weight: 400;
-    line-height: 28px;
+    line-height: 100%;
 }
 
 .buttonAddStage {
-    width: 332px;
     height: 40px;
     color: #5277F6;
-    font-size: 24px;
     font-style: normal;
     font-weight: 400;
-    line-height: 23px;
+    line-height: 100%;
     background: none;
     border: 1px solid #5277F6;
     border-radius: 20px ;
@@ -176,10 +172,9 @@
 
 .newstage__title {
     color: var(--Primary, #5277F6);
-    font-size: 20px;
     font-style: normal;
     font-weight: 400;
-    line-height: 23px;
+    line-height: 100%;
 }
 
 .newstage__form {
@@ -225,7 +220,6 @@
 
 .addTaskLabel {
     color: #5277F6;
-    font-size: 24px;
     font-style: normal;
     font-weight: 400;
     line-height: 23px;
