--- a/src/pages/Greetings/Greetings.module.css
+++ b/src/pages/Greetings/Greetings.module.css
@@ -3,22 +3,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 300px 0;
+    margin: auto;
 }
 
 .greetings__text {
-    width: 700px;
+    max-width: 500px;
     color: #333;
     text-align: center;
-    font-size: 32px;
     font-style: normal;
     font-weight: 400;
-    line-height: 60px;
+    line-height: 130%;
 }
 
 .greetings__button {
-    width: 245px;
-    height: 76px;
     border-radius: 50px;
     margin: 48px 0 30px;
     color: #FFF;
@@ -26,7 +23,7 @@
     font-size: 26px;
     font-style: normal;
     font-weight: 400;
-    line-height: 60px;
+    line-height: 100%;
 }
 .greetings__button:last-of-type {
     margin: 0;
