--- a/src/pages/VideoLecture/VideoLecture.module.css
+++ b/src/pages/VideoLecture/VideoLecture.module.css
@@ -12,16 +12,14 @@
 
 .lecturevideo__title {
     color: #252525;
-    font-size: 24px;
     font-style: normal;
     font-weight: 400;
-    line-height: 28px;
+    line-height: 100%;
     max-width: 200px;
 }
 
 .lecturevideo__description {
     color: #252525;
-    font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 19px;
@@ -31,7 +29,6 @@
 
 .lecturevideo__department {
     color: #5277F6;
-    font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: 21px;
@@ -39,7 +36,6 @@
 
 .lecturevideo__input {
     display: flex;
-    width: 669px;
     padding: 10px 30px;
     align-items: center;
     border-radius: 36px;
