Пул после мержа

--- a/src/components/Mission/MissionAccordion/MissionAccordion.module.css
+++ b/src/components/Mission/MissionAccordion/MissionAccordion.module.css
@@ -28,6 +28,15 @@
     margin: 0 auto 30px;
 }
 
+.missionAccordion__chevron {
+    width: 30px;
+}
+@media screen and (max-width: 580px) {
+    .missionAccordion__chevron {
+        width: 25px;
+    }
+}
+
 
 .missionAccordion__control:hover {
     background: #FFF;
