--- a/src/modules/VideoLecture/VideoLecture.module.css
+++ b/src/modules/VideoLecture/VideoLecture.module.css
@@ -1,40 +1,4 @@
-.lecturevideo {
-    flex-direction: column;
-    border-radius: 32px;
-    background: #FFF;
-    box-shadow: 0px 4px 24px 0px rgba(144, 139, 139, 0.16);
-}
-
-.lecturevideo__video {
-    border-radius: 32px 32px 0 0;
-    object-fit: cover;
-}
-
-.lecturevideo__title {
-    color: #252525;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 100%;
-    max-width: 200px;
-}
-
-.lecturevideo__description {
-    color: #252525;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 19px;
-    opacity: 0.8;
-    max-width: 180px;
-}
-
-.lecturevideo__department {
-    color: #5277F6;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 21px;
-}
-
-.lecturevideo__input {
+.videolecture__input {
     display: flex;
     padding: 10px 30px;
     align-items: center;
@@ -42,7 +6,7 @@
     border: 1px solid var(--Primary, #5277F6);
 }
 
-.lecturevideo__button {
+.videolecture__button {
     width: 193px;
     color: #5277F6;
     font-size: 20px;
@@ -53,7 +17,7 @@
     background: #F8F8F8;
 }
 
-.lecturevideo__buttonSearch {
+.videolecture__buttonSearch {
     background: #5277F6;
     color:  #EEFF87;
 }
