--- a/src/modules/Footer/Footer.module.css
+++ b/src/modules/Footer/Footer.module.css
@@ -11,3 +11,10 @@
 .proscom {
   color: var(--mantine-color-gray-filled);
 }
+
+@media (max-width: 510px) {
+  .containerLinks {
+    flex-direction: column;
+    align-items: center;
+  }
+}
