--- a/src/pages/Greetings/Greetings.module.css
+++ b/src/pages/Greetings/Greetings.module.css
@@ -16,8 +16,8 @@
 }
 
 .greetings__button {
+    width: 100%;
     border-radius: 50px;
-    margin: 48px 0 30px;
     color: #FFF;
     text-align: center;
     font-size: 26px;
