--- a/src/components/Lecture/LectureVideo.module.css
+++ b/src/components/Lecture/LectureVideo.module.css
@@ -3,6 +3,7 @@
     border-radius: 32px;
     background: #FFF;
     box-shadow: 0px 4px 24px 0px rgba(144, 139, 139, 0.16);
+
 }
 
 .lecturevideo__video {
@@ -15,7 +16,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 100%;
-    max-width: 200px;
+    max-width: 180px;
 }
 
 .lecturevideo__description {
@@ -32,4 +33,8 @@
     font-style: normal;
     font-weight: 400;
     line-height: 21px;
+}
+
+.lecturevideo__button:hover {
+    background: transparent;
 }
