--- a/src/components/Mission/PopupMission/PopupMission.module.css
+++ b/src/components/Mission/PopupMission/PopupMission.module.css
@@ -15,7 +15,7 @@
 .popupMission__box {
   flex-direction: row;
   justify-content: space-between;
-  width: 100;
+  width: 100%;
   margin-bottom: 80px;
 }
 
@@ -30,11 +30,11 @@
 
 .popupMission__title {
   color: var(--Primary, #5277f6);
-  max-width: 300px;
-  font-size: 60px;
+  max-width: 700px;
+  text-align: center;
   font-style: normal;
   font-weight: 400;
-  line-height: 60px;
+  line-height: 110%;
 }
 
 .popupMission__bag {
@@ -47,10 +47,9 @@
 
 .popupMission__coin {
   color: var(--text-2, #535353);
-  font-size: 24px;
   font-style: normal;
   font-weight: 700;
-  line-height: 28px;
+  line-height: 100%;
 }
 
 .popupMission__boxTime {
@@ -117,3 +116,18 @@
   font-weight: 400;
   line-height: 28px;
 }
+.popupMission__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
+}
+
+.popupMission__textArea {
+  padding: 10px 30px 0;
+  align-items: center;
+  border-radius: 36px;
+  border: 1px solid var(--Primary, #5277F6);
+  height: 150px;
+}
+
